--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -12,26 +12,26 @@
 # tags = security, dependencies  # noqa: E265
 # changelog = Pinned all action SHAs; added annotation header  # noqa: E265
 
-name: 'Dependency Review'
+name: "Dependency Review"
 
 on:
-  pull_request:
-  workflow_dispatch: {}
+    pull_request:
+    workflow_dispatch: {}
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  dependency-review:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf
-        with:
-          egress-policy: audit
+    dependency-review:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf
+              with:
+                  egress-policy: audit
 
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+            - name: Checkout repository
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      - name: Dependency Review
-        uses: actions/dependency-review-action@67d4f4bd7a9b17a0db54d2a7519187c65e339de8
+            - name: Dependency Review
+              uses: actions/dependency-review-action@67d4f4bd7a9b17a0db54d2a7519187c65e339de8
