--- a/.github/workflows/prepare-poetry.yml
+++ b/.github/workflows/prepare-poetry.yml
@@ -14,32 +14,32 @@ jobs:
             - name: Harden the runner (Audit all outbound calls)
               uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
               with:
-                egress-policy: audit
+                  egress-policy: audit
 
-            -   name: Set up Python
-                id: setup-python
-                uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
-                with:
-                    python-version: '3.12'
+            - name: Set up Python
+              id: setup-python
+              uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
+              with:
+                  python-version: "3.12"
 
-            -   name: Cache Poetry Dependencies
-                uses: actions/cache@2f8e54208210a422b2efd51efaa6bd6d7ca8920f # v3.4.3
-                with:
-                    path: |
-                        ~/.cache/pypoetry
-                        ~/.virtualenvs
-                    key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-poetry-
+            - name: Cache Poetry Dependencies
+              uses: actions/cache@2f8e54208210a422b2efd51efaa6bd6d7ca8920f # v3.4.3
+              with:
+                  path: |
+                      ~/.cache/pypoetry
+                      ~/.virtualenvs
+                  key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-poetry-
 
-            -   name: Install Poetry
-                uses: snyk/actions/install-poetry@v3
-                with:
-                    version: latest
+            - name: Install Poetry
+              uses: snyk/actions/install-poetry@v3
+              with:
+                  version: latest
 
-            -   name: Install Dependencies
-                run: poetry install --no-interaction
+            - name: Install Dependencies
+              run: poetry install --no-interaction
 
-            -   name: Export Dev Requirements
-                run: |
-                    poetry export --only dev --without-hashes --format=requirements.txt > dev-requirements.txt
+            - name: Export Dev Requirements
+              run: |
+                  poetry export --only dev --without-hashes --format=requirements.txt > dev-requirements.txt
