--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -4,51 +4,51 @@
 name: Security - Scorecard
 
 on:
-  branch_protection_rule:
-  schedule:
-    - cron: '21 21 * * 2'  # Weekly on Tuesdays
-  push:
-    branches: [main]
+    branch_protection_rule:
+    schedule:
+        - cron: "21 21 * * 2" # Weekly on Tuesdays
+    push:
+        branches: [main]
 
 permissions: read-all
 
 jobs:
-  analysis:
-    name: Run Scorecard analysis
-    runs-on: ubuntu-latest
-    if: github.event.repository.default_branch == github.ref_name || github.event_name == 'pull_request'
-    permissions:
-      security-events: write
-      id-token: write
+    analysis:
+        name: Run Scorecard analysis
+        runs-on: ubuntu-latest
+        if: github.event.repository.default_branch == github.ref_name || github.event_name == 'pull_request'
+        permissions:
+            security-events: write
+            id-token: write
 
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
-        with:
-          egress-policy: audit
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
+              with:
+                  egress-policy: audit
 
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          persist-credentials: false
+            - name: Checkout code
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+              with:
+                  persist-credentials: false
 
-      - name: Run Scorecard scan
-        uses: ossf/scorecard-action@f49aabe0b5af0936a0987cfb85d86b75731b0186 # v2.4.1
-        with:
-          results_file: results.sarif
-          results_format: sarif
-          publish_results: true
-          # Optional: uncomment below to enable branch-protection check on public repos
-          # repo_token: ${{ secrets.SCORECARD_TOKEN }}
+            - name: Run Scorecard scan
+              uses: ossf/scorecard-action@f49aabe0b5af0936a0987cfb85d86b75731b0186 # v2.4.1
+              with:
+                  results_file: results.sarif
+                  results_format: sarif
+                  publish_results: true
+                  # Optional: uncomment below to enable branch-protection check on public repos
+                  # repo_token: ${{ secrets.SCORECARD_TOKEN }}
 
-      - name: Upload artifact (SARIF JSON)
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: scorecard-sarif
-          path: results.sarif
-          retention-days: 5
+            - name: Upload artifact (SARIF JSON)
+              uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+              with:
+                  name: scorecard-sarif
+                  path: results.sarif
+                  retention-days: 5
 
-      - name: Upload to GitHub Code Scanning dashboard
-        uses: github/codeql-action/upload-sarif@45775bd8235c68ba998cffa5171334d58593da47 # v3.28.15
-        with:
-          sarif_file: results.sarif
+            - name: Upload to GitHub Code Scanning dashboard
+              uses: github/codeql-action/upload-sarif@45775bd8235c68ba998cffa5171334d58593da47 # v3.28.15
+              with:
+                  sarif_file: results.sarif
