--- a/.github/workflows/security-trivy.yml
+++ b/.github/workflows/security-trivy.yml
@@ -1,138 +1,104 @@
 name: Security - Trivy
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '0 2 * * *'  # Run daily at 2 AM UTC
+    push:
+        branches: ["main"]
+    pull_request:
+        branches: ["main"]
 
 permissions:
-  contents: read
-  security-events: write
-  pull-requests: write
+    contents: read
+    security-events: write
+    pull-requests: write
 
 jobs:
-  trivy:
-    name: Run Trivy vulnerability scan (Image, FS, IaC, Secrets)
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@v2.11.1
-        with:
-          egress-policy: audit
+    trivy:
+        name: Run Trivy vulnerability scan (Image, FS, IaC, Secrets)
+        runs-on: ubuntu-22.04
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@v2.11.1
+              with:
+                  egress-policy: audit
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update && sudo apt-get install -y jq curl
+            - name: Install dependencies
+              run: |
+                  sudo apt-get update && sudo apt-get install -y jq curl
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker image with commit SHA tag
-        run: docker build -t ledgerbase:${{ github.sha }} .
+            - name: Build Docker image with commit SHA tag
+              run: docker build -t ledgerbase:${{ github.sha }} .
 
-      - name: Install Trivy CLI
-        run: |
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
-          trivy --version
+            - name: Install Trivy CLI
+              run: |
+                  curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+                  trivy --version
 
-      - name: Run Trivy Image Scan and Export SARIF & JSON (using shared cache)
-        run: |
-          mkdir -p .trivycache
+            - name: Run Trivy via Nox
+              run: nox -s trivy
 
-          trivy image ledgerbase:${{ github.sha }} \
-            --cache-dir .trivycache \
-            --exit-code 0 \
-            --severity HIGH,CRITICAL \
-            --ignore-unfixed \
-            --ignorefile .trivyignore \
-            --format sarif \
-            --output trivy-results.sarif
+            - name: Validate outputs
+              run: |
+                  test -f docs/reports/sarif/trivy-results.sarif || { echo "SARIF output not found"; exit 1; }
+                  test -f docs/reports/json/trivy-results.json || { echo "JSON output not found"; exit 1; }
 
-          trivy image ledgerbase:${{ github.sha }} \
-            --cache-dir .trivycache \
-            --exit-code 0 \
-            --severity HIGH,CRITICAL \
-            --ignore-unfixed \
-            --ignorefile .trivyignore \
-            --format json \
-            --output trivy-results.json
+            - name: Count HIGH/CRITICAL issues in SARIF
+              id: count
+              run: |
+                  count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif 2>/dev/null || echo "0")
+                  echo "Total HIGH/CRITICAL issues: $count"
+                  echo "vulns=$count" >> $GITHUB_OUTPUT
 
-      - name: Run Trivy Filesystem + IaC + Secrets Scan
-        run: |
-          mkdir -p trivy-fs
+            - name: Upload SARIF to GitHub Security tab
+              uses: github/codeql-action/upload-sarif@v3
+              with:
+                  sarif_file: trivy-results.sarif
 
-          trivy fs . \
-            --cache-dir .trivycache \
-            --exit-code 0 \
-            --ignore-unfixed \
-            --ignorefile .trivyignore \
-            --format table \
-            --scanners vuln,secret,config \
-            --output trivy-fs/fs-scan.txt
+            - name: Upload JSON artifact (includes enriched metadata)
+              if: always()
+              uses: actions/upload-artifact@v4
+              with:
+                  name: trivy-json
+                  path: trivy-results.json
 
-      - name: Validate outputs
-        run: |
-          test -f trivy-results.sarif || { echo "SARIF output not found"; exit 1; }
-          test -f trivy-results.json || { echo "JSON output not found"; exit 1; }
+            - name: Upload FS/IaC/Secrets scan results
+              if: always()
+              uses: actions/upload-artifact@v4
+              with:
+                  name: trivy-fs-scan
+                  path: trivy-fs
 
-      - name: Count HIGH/CRITICAL issues in SARIF
-        id: count
-        run: |
-          count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif 2>/dev/null || echo "0")
-          echo "Total HIGH/CRITICAL issues: $count"
-          echo "vulns=$count" >> $GITHUB_OUTPUT
+            - name: Fail job if high-severity vulnerabilities found
+              if: steps.count.outputs.vulns != '0'
+              run: |
+                  echo "::error::Trivy found ${{ steps.count.outputs.vulns }} HIGH or CRITICAL vulnerabilities."
+                  exit 1
 
-      - name: Upload SARIF to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-results.sarif
+            - name: Label PR if Trivy issues found
+              if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
+              uses: actions/github-script@v7
+              with:
+                  script: |
+                      const label = 'security:trivy';
+                      const pr = context.payload.pull_request;
+                      if (!pr || !pr.number) {
+                        console.log("No pull request context or PR number. Skipping label.");
+                        return;
+                      }
+                      await github.rest.issues.addLabels({
+                        owner: context.repo.owner,
+                        repo: context.repo.repo,
+                        issue_number: pr.number,
+                        labels: [label],
+                      });
 
-      - name: Upload JSON artifact (includes enriched metadata)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-json
-          path: trivy-results.json
-
-      - name: Upload FS/IaC/Secrets scan results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-fs-scan
-          path: trivy-fs
-
-      - name: Fail job if high-severity vulnerabilities found
-        if: steps.count.outputs.vulns != '0'
-        run: |
-          echo "::error::Trivy found ${{ steps.count.outputs.vulns }} HIGH or CRITICAL vulnerabilities."
-          exit 1
-
-      - name: Label PR if Trivy issues found
-        if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'security:trivy';
-            const pr = context.payload.pull_request;
-            if (!pr || !pr.number) {
-              console.log("No pull request context or PR number. Skipping label.");
-              return;
-            }
-            await github.rest.issues.addLabels({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: pr.number,
-              labels: [label],
-            });
-
-      - name: Cleanup temporary files
-        if: always()
-        run: |
-          rm -f trivy-results.sarif trivy-results.json
-          rm -rf trivy-fs
+            - name: Cleanup temporary files
+              if: always()
+              run: |
+                  rm -f trivy-results.sarif trivy-results.json
+                  rm -rf trivy-fs
