--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,36 +1,36 @@
 name: Mark stale issues and PRs
 
 on:
-  schedule:
-    - cron: '0 4 * * *'  # Daily at 4am UTC
+    schedule:
+        - cron: "0 4 * * *" # Daily at 4am UTC
 
 permissions:
-  issues: write
-  pull-requests: write
+    issues: write
+    pull-requests: write
 
 jobs:
-  stale:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
-        with:
-          egress-policy: audit
+    stale:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
+              with:
+                  egress-policy: audit
 
-      - uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9.1.0
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: >
-            This issue has been automatically marked as stale due to inactivity for 30 days.
-            It will be closed in 7 days if no further activity occurs.
-          stale-pr-message: >
-            This pull request has been marked as stale after 14 days of inactivity.
-            If it's still relevant, please rebase or comment.
-          days-before-stale: 30
-          days-before-close: 7
-          days-before-pr-stale: 14
-          days-before-pr-close: 7
-          stale-issue-label: status:stale
-          stale-pr-label: status:stale
-          exempt-issue-labels: status:accepted,status:security,help wanted
-          exempt-pr-labels: status:auto-approved,status:test-fail
+            - uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9.1.0
+              with:
+                  repo-token: ${{ secrets.GITHUB_TOKEN }}
+                  stale-issue-message: >
+                      This issue has been automatically marked as stale due to inactivity for 30 days.
+                      It will be closed in 7 days if no further activity occurs.
+                  stale-pr-message: >
+                      This pull request has been marked as stale after 14 days of inactivity.
+                      If it's still relevant, please rebase or comment.
+                  days-before-stale: 30
+                  days-before-close: 7
+                  days-before-pr-stale: 14
+                  days-before-pr-close: 7
+                  stale-issue-label: status:stale
+                  stale-pr-label: status:stale
+                  exempt-issue-labels: status:accepted,status:security,help wanted
+                  exempt-pr-labels: status:auto-approved,status:test-fail
